vlib/v/checker/tests/globals/non_grouped.out
vlib/v/checker/tests/globals/non_grouped.vv:1:10: error: globals must be grouped, e.g. `__global ( a = int(1) )`
    1 | __global name int
      |          ~~~~
